# fluidsim

./: .gitignore  CNAME  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  index.html  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: web.yml
.zed/: settings.json
assets/shader/: circle.wgsl
assets/shaders/: circle.vs.wgsl  physics.comp.wgsl
assets/wgsl/: circle.fs.wgsl  circle.vs.wgsl  physics.comp.wgsl
assets/wgsl/common/: prims.wgsl
crates/fluidsim/: Cargo.toml  build.rs
crates/fluidsim-desktop/: Cargo.toml
crates/fluidsim-desktop/src/: main.rs
crates/fluidsim/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  prelude.rs
crates/fluidsim/src/physics/: mod.rs
crates/fluidsim/src/renderer/: egui.rs  fps.rs  graphics.rs  input.rs  mod.rs  panel.rs  performance.rs  state.rs  text.rs  wgpu_state.rs
crates/fluidsim/src/renderer/buffers/: mod.rs
crates/fluidsim/src/renderer/shader/: buffers.rs  circles.rs  compute.rs  lines.rs  mod.rs  physics.rs  pipelines.rs  vertex.rs
crates/fluidsim/src/renderer/shader/bindings/: mod.rs  physics.rs  prims.rs  spatial_hash.rs  user_data.rs
crates/gpu-shared/: Cargo.toml
crates/gpu-shared/src/: lib.rs
crates/physics/: Cargo.toml
crates/physics/src/: curves.rs  gradient.rs  lib.rs  sp_hash.rs
osx/: .gitignore
osx/FluidSim.app/Contents/: Info.plist
pkg/: README.md  fluidsim.d.ts  fluidsim.js  fluidsim_bg.wasm.d.ts  package.json
src/: error.rs  ipc.rs  lib.rs  logger.rs  main.rs  prelude.rs  state.rs
src/app/: mod.rs  state.rs
src/circle/: mod.rs
src/gradient/: mod.rs
src/gui/: mod.rs
src/ipc/: mod.rs  shared.rs
src/physics/: mod.rs  particle.rs  prelude.rs  scene.rs  settings.rs
src/renderer/: egui.rs  egui_translator.rs  error.rs  fps.rs  input.rs  keyboard.rs  message.rs  mod.rs  panel.rs  shader.rs  state.rs
src/renderer/shader/: compute.rs  mod.rs  vertex.rs
src/shader/: circle.fs.wgsl  circle.vs.wgsl  physics.comp.wgsl
src/shaders/: circle.wgsl
src/shared/: mod.rs
src/state/: config.rs  mod.rs  mouse.rs
src/vec2/: mod.rs
