[package]
name = "fluidsim_exec"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.13.0", features = ["unstable"] }
bytemuck = "1.21.0"
cfg-if = "1.0.0"
glam = "0.29.2"
glyphon = "0.8.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.25"
lyon = "1.0.1"
rand = "0.8.5"
rayon = "1.10.0"
thiserror = { git = "https://github.com/onlycs/thiserror" }
wgpu = "24.0.1"
winit = "0.30.8"

[dependencies.egui-wgpu]
git = "https://github.com/emilk/egui"
default-features = false

[dependencies.egui]
git = "https://github.com/emilk/egui"

[dependencies.egui-winit]
git = "https://github.com/emilk/egui"
default-features = false
features = ["links", "wayland", "x11"]

[dependencies.skuld]
git = "https://github.com/onlycs/asgard"
default-features = false
features = ["facade"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "24.0.0", features = ["webgl"] }
wasm-bindgen = "=0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
getrandom = { version = "0.2.3", features = ["js"] }
web-time = "1.1.0"

[lib]
name = "fluidsim"
crate-type = ["cdylib", "rlib"]

[features]
sync = []
