[package]
name = "fluidsim_exec"
description = "A fluid simulation"
license = "AGPL-3.0"
repository = "https://github.com/onlycs/fluidsim"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.21.0"
cfg-if = "1.0.0"
glam = { version = "0.29.2", features = ["bytemuck"] }
glyphon = "0.8.0"
include-wgsl-oil = { git = "https://github.com/onlycs/include-wgsl-oil", features = [
	"bytemuck",
	"glam",
] }
itertools = "0.14.0"
log = "0.4.25"
lyon = "1.0.1"
pollster = "0.4.0"
rand = "0.8.5"
rayon = "1.10.0"
thiserror = { git = "https://github.com/onlycs/thiserror" }
wgpu = "24.0.1"
winit = "0.30.8"

[dependencies.egui-wgpu]
git = "https://github.com/emilk/egui"
default-features = false

[dependencies.egui]
git = "https://github.com/emilk/egui"

[dependencies.egui-winit]
git = "https://github.com/emilk/egui"
default-features = false
features = ["links", "wayland", "x11"]

[dependencies.skuld]
git = "https://github.com/onlycs/asgard"
default-features = false
features = ["facade"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "=0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
getrandom = { version = "0.2.3", features = ["js"] }
web-time = "1.1.0"

[lib]
name = "fluidsim"
crate-type = ["cdylib", "rlib"]
