[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
glam = { version = "=0.31.0", features = ["bytemuck"] }
gpu-shared = { path = "crates/gpu-shared" }
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu" }

[profile.dev.build-override]
opt-level = 3

[profile.release]
strip = true
