[package]
name = "fluidsim"
version = "0.1.1"
edition = "2024"

[dependencies]
bytemuck = "1.21.0"
cfg-if = "1.0.0"
glam.workspace = true
gpu-shared.workspace = true
itertools = "0.14.0"
lyon = "1.0.1"
pollster = "0.4.0"
rand = "0.10.1"
rayon = "1.11.0"
snafu = "0.9.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wgpu = { version = "29.0.3", default-features = false, features = [
    "spirv",
    "dx12",
    "metal",
    "webgpu",
] }
wgpu-sort = { git = "https://github.com/onlycs/wgpu-algorithms" }
# wgpu-sort = { path = "../../../wgpu-algorithms" }
winit = { version = "0.30.8", features = ["wayland"] }

[dependencies.egui-wgpu]
git = "https://github.com/emilk/egui"
default-features = false

[dependencies.egui]
git = "https://github.com/emilk/egui"

[dependencies.egui-winit]
git = "https://github.com/emilk/egui"
default-features = false
features = ["links", "wayland", "x11"]

[dependencies.glyphon]
git = "https://github.com/onlycs/glyphon"

[build-dependencies]
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu" }
