[package]
name = "gpu-shared"
version = "0.1.0"
edition = "2024"

[dependencies]

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu" }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { version = "=0.29.3", features = ["bytemuck"] }
bytemuck = { version = "1.21.0" }
